ronda 2026-09-15: revisión + mejoras + pulido + fixes
